syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/samarthasthan/21BRS1248_Backend/proto_go";

// Register related messages
message RegisterRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 5;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
}

// Login related messages
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string session_id = 2;
  google.protobuf.Timestamp expires_at = 3;
  string message = 4;
}

message CheckJWTRequest {
  string session_id = 1;
}

message CheckJWTResponse {
  bool valid = 1;
  string email = 2;
  google.protobuf.Timestamp expires_at = 3;
}

// Authentication service definition
service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc CheckJWT(CheckJWTRequest) returns (CheckJWTResponse);
}